...
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginEnd="8dp" />

            <!-- Delete Profile Button -->
            <ImageButton
                android:id="@+id/profile_delete_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:contentDescription="Delete profile"
                android:src="@drawable/ic_profile"
                app:tint="@color/primary" />

            <!-- Delete Profile Picture Button -->
            <ImageButton
                android:id="@+id/profile_pic_delete_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="Delete profile picture"
                android:src="@drawable/ic_poster_delete"
                app:tint="@color/primary" />
...
